force-app/main/default/objects/Revature_Music_Class__c/Revature_Music_Class__c.object-meta.xml
<CustomObject>
    <label>Revature Music Class</label>
    <nameField>
        <label>Revature Music Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revature Music Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>