force-app/main/default/objects/Revature_Music_Class__c/fields/Assistant_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant Instructor</label>
    <referenceTo>Music_Store_Accounts__c</referenceTo>
    <relationshipLabel>Revature Music Classes</relationshipLabel>
    <relationshipName>Revature_Music_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>