force-app/main/default/objects/Revature_Music_Class__c/fields/Class_address__c.field-meta.xml
<CustomField>
    <fullName>Class_address__c</fullName>
    <label>Class address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>