force-app/main/default/objects/Revature_Music_Class__c/fields/Class_Image__c.field-meta.xml
<CustomField>
    <fullName>Class_Image__c</fullName>
    <description>Image for the music class</description>
    <label>Class Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>