force-app/main/default/objects/Revature_Music_Class__c/fields/Instruments__c.field-meta.xml
<CustomField>
    <fullName>Instruments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instruments</label>
    <referenceTo>Music_Product__c</referenceTo>
    <relationshipLabel>Revature Music Classes</relationshipLabel>
    <relationshipName>Revature_Music_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>