force-app/main/default/objects/Revature_Music_Class__c/fields/Instruments_Offered__c.field-meta.xml
<CustomField>
    <fullName>Instruments_Offered__c</fullName>
    <description>The instrument taught during the class.</description>
    <label>Instruments Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cymbal</fullName>
            </value>
            <value>
                <fullName>Piano</fullName>
            </value>
            <value>
                <fullName>Harmonica</fullName>
            </value>
            <value>
                <fullName>Clairnet</fullName>
            </value>
            <value>
                <fullName>Tambouirne</fullName>
            </value>
            <value>
                <fullName>Saxaphone</fullName>
            </value>
            <value>
                <fullName>Flute</fullName>
            </value>
            <value>
                <fullName>Bass Guitar</fullName>
            </value>
            <value>
                <fullName>Ukelele</fullName>
            </value>
            <value>
                <fullName>Recorder</fullName>
            </value>
            <value>
                <fullName>Violin</fullName>
            </value>
            <value>
                <fullName>Trumpet</fullName>
            </value>
            <value>
                <fullName>Sitar</fullName>
            </value>
            <value>
                <fullName>Guitar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>