force-app/main/default/objects/Revature_Music_Class__c/fields/Revature_Music_Store__c.field-meta.xml
<CustomField>
    <fullName>Revature_Music_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revature Music Store</label>
    <referenceTo>Revature_Music_Store__c</referenceTo>
    <relationshipLabel>Revature Music Classes</relationshipLabel>
    <relationshipName>Revature_Music_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>