force-app/main/default/objects/Revature_Music_Class__c/fields/Students_currently_in_Class__c.field-meta.xml
<CustomField>
    <fullName>Students_currently_in_Class__c</fullName>
    <description>Number of Students currently in class</description>
    <label>Students currently in Class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>